--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,10 +1,11 @@
 ---
 ---
 
+@import 'fonts';
 @import 'normalize';
 @import 'syntax';
 
-$sans:		'Whitney SSm A', 'Whitney SSm B', system-ui, sans-serif;
+$sans:		'Ilisarniq', system-ui, sans-serif;
 $lh:			1.7;
 
 $brand:		#F3F2EF;
